--- a/static/index.html
+++ b/static/index.html
@@ -1,15 +1,145 @@
+<!--
+    Author: Sebastian Jaculbe
+    Created: February 15th, 2026
+    Updated: February 15th, 2026
+-->
+
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
-<title>Node on Azure</title>
+    <meta charset="utf-8">
+    <meta name="viewport" width="width=device-width, initial-scale=1.0">
+    <title>Web Resume</title>
+    <link rel="stylesheet" href="main.css">
+    <link rel="icon" type="image/x-icon" href="resume-image.jpg">
 </head>
 <body>
-<h1>Node.js and Express Hosted on Microsoft Azure Template</h1>
-<p>This repository serves as a template that can be used to create a Node.js and Express based website that can easily
-be hosted on Microsoft Azure.</p>
+    <section>
+        <h1>Sebastian Jaculbe</h1>
+        <div>
+            Monee, Illinois &emsp;-&emsp; <a href="mailto:seb.basti2004@gmail.com">seb.basti2004@gmail.com</a> &emsp;-&emsp; (708)-654-5134 &emsp;-&emsp;
+            LinkedIn: <a href="www.linkedin.com/in/sebastian-jaculbe-991944354 ">www.linkedin.com/in/sebastian-jaculbe-991944354 </a>
+        </div>
+    </section>
 
-Additional application functionality includes:<br />
-<a href="fetching-from-server.html">Accessing Node.js Server-Side Application Programming Interfaces (APIs)</a><br />
-<a href="fetching-remote-dog-breeds.html">Accessing Remote Application Programming Interfaces (APIs)</a>
+    <!--Education-->
+    <section>
+        <h2>Education</h2>
+        <div>
+            <p>
+                <b>Bachelor of Computer Science - Lewis Unviersity</b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Expected: May 2027<br>
+                Romeoville, Illinois<br>
+                Major GPA: 3.55
+            </p>
+        </div>
+    </section>
+    
+    <!--Skills-->
+    <section>
+        <h2>Skills</h2>
+        <div>
+            <p>
+                <b>Operating Systems</b><br>
+                <ul>
+                    <li>Windows</li>
+                    <li>MacOS</li>
+                    <li>iOS</li>
+                    <li>Android</li>
+                </ul>
+                <b>Languages:</b><br>
+                <ul>
+                    <li>HyperText Markup Language (HTML)</li>
+                    <li>Cascading Styling Sheet (CSS)</li>
+                    <li>JavaScript</li>
+                    <li>Java</li>
+                    <li>Python</li>
+                </ul>
+                <b>Networking:</b><br>
+                <ul>
+                    <li>Cisco Packet Tracer</li>
+                    <li>Wireshark</li>
+                </ul>
+                <b>Applications:</b>
+                <ul>
+                    <li>Microsoft Office</li>
+                    <li>Google Documents</li>
+                </ul>
+            </p>
+        </div>
+    </section>
+
+    <!--Work History-->
+    <section>
+        <h2>Work History</h2>
+        <div>
+            <p>
+                <b>Deicer</b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;December 2025-Present<br>
+                Inland Deicing Services, Des Plaines, Illinois
+                <ul>
+                    <li>Provided de-icing and anti-icing services to domestic and international flights at O'hare International Airport.</li>
+                    <li>Performed truck checkups for adequate safety, liquids, and performance before the start of every shift.</li>
+                    <li>Effectively communicated with team members before, during, and after spraying services.</li>
+                </ul>
+                <br>
+                <br>
+                <b>Golf Caddie</b>&emsp;&emsp;&emsp;&emsp;&emsp;May 2024-Present<br>
+                Olympia Fields Country Club, Olympia Fields, Illinois
+                <ul>
+                    <li>Maintained pristine course conditions by repairing divots, raking bunkers, and tending the flagstick during rounds</li>
+                    <li>Carried one to two bags of clubs for full 18-hole rounds of golf.</li>
+                    <li>Assisted other caddies with golfers' bags to maintain a steady pace of play.</li>
+                </ul>
+                <br>
+                <br>
+                <b>Busser</b>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;June 2022-August 2024<br>
+                Gracie's Burritos, Monee, Illinois
+                <ul>
+                    <li>Displayed excellent time management skills through balance completion of multiple tasks.</li>
+                    <li>Provided support during special events, ensuring seamless operations despite increased demands.</li>
+                    <li>Supported team members with additional tasks.</li>
+                </ul>
+                <br>
+                <br>
+                <b>Dishwasher</b>&emsp;&emsp;&emsp;&emsp;&emsp;July 2023-August 2023<br>
+                Labas Seafood Steak and Wine Bar, Monee, Illinois
+                <ul>
+                    <li>Followed supervisor instructions to complete tasks on time.</li>
+                    <li>Enhanced team productivity by promptly cleaning and restocking dishes, utensils, and cookware.</li>
+                </ul>
+            </p>
+        </div>
+    </section>
+
+    <!--Extracurriculars-->
+    <section>
+        <h2>Extracurriculars/Hobbies</h2>
+        <div>
+            <b>School Extracurriculars:</b>
+            <ul>
+                <li>Lewis University Men's Volleyball Student Manager</li>
+                <li>Asian American Association Treasurer</li>
+                <li>Filipino American Student Union Secretary and Treasurer</li>
+                <li>Lewis Club Volleyball Treasurer</li>
+                <li>Esports Club Officer</li>
+            </ul>
+            <b>Hobbies:</b>
+            <ul>
+                <li>Volleyball</li>
+                <li>Basketball</li>
+                <li>Billiard</li>
+                <li>Darts</li>
+                <li>Photography</li>
+            </ul>
+        </div>
+    </section>
+
+    <!--Download Resume-->
+    <section>
+        <h2>Download Resume</h2>
+        <div>
+            <p>Select the link to download a pdf version of this web resume.</p>
+            <a href="Sebastian-Jaculbe-New-Resume.pdf" download="Sebastian Jaculbe's New Resume.pdf">Download PDF</a>
+        </div>
+    </section>
 </body>
 </html>
